--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -7,13 +7,193 @@
     android:layout_height="match_parent"
     android:background="@color/main_background"
     tools:context=".ui.HotelFragment">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
+            android:layout_marginTop="8dp"
+            app:cardElevation="0dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/container_info_hotel"
+                android:padding="16dp">
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_grade"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/orange_lite"
+                    app:cardCornerRadius="6dp"
+                    app:cardElevation="0dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+                    <TextView
+                        android:id="@+id/tv_grade"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="6dp"
+                        android:textSize="16sp"
+                        android:textColor="@color/orange"
+                        app:drawableLeftCompat="@drawable/ic_baseline_star_24" />
+                </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/tv_hotel_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="6dp"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
+                    app:layout_constraintTop_toBottomOf="@+id/cv_grade"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+                <TextView
+                    android:id="@+id/tv_hotel_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:textSize="14sp"
+                    android:paddingVertical="6dp"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/button_background"
+                    android:background="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_hotel_name"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
+            android:layout_marginTop="8dp"
+            app:cardElevation="0dp">
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="16dp">
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/departure_from"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_departure"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+                </TableRow>
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/country_city"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_arrival_country"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+                </TableRow>
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/dates"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_dates"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+                </TableRow>
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/nights"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_number_of_nights"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+                </TableRow>
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/hotel"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_hotel_name_info"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+                </TableRow>
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/room"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_room"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+                </TableRow>
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/nutrition"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_nutrition"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:textColor="@color/black" />
+                </TableRow>
 
 
+
+            </TableLayout>
+        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
